<resources>
    <string name="app_name">AppContabilidad</string>
    <string name="login_text">Write you password</string>
    <string name="password_hint">Password</string>
    <string name="login_button">Sign in</string>
    <string name="password">112358</string>
    <string name="title_activity_overview">OverviewActivity</string>
    <string name="general_overview_page_title">Overview</string>
    <string name="summary_page_title">Summary</string>
    <string name="budget_page_title">Budget</string>
    <string name="chart_page_title">Chart</string>
    <string name="overview_empty_title_text">Overview There are no entries yet</string>
    <string name="summary_empty_title_text">Summary There are no entries yet</string>
    <string name="budget_empty_title_text">Budget There are no entries yet</string>
    <string name="navigation_drawer_open">open</string>
    <string name="navigation_drawer_close">close</string>
    <string name="hint_concept">Concept</string>
    <string name="concept">CONCEPT</string>
    <string name="description">DESCRIPTION</string>
    <string name="hint_description">Description (optional)</string>
    <string name="category_currency">CURRENCY</string>
    <string name="category_quantity">QUANTITY</string>
    <string name="hint_quantity">Quantity</string>
    <string name="date">DATE</string>
    <string name="hint_date">Date</string>
    <string name="add_entry_page_title">Add Entry</string>
    <string name="paid_with">PAID WITH</string>
    <string name="budget_entry_page_title">Budget Entry</string>
    <string name="add_entry_expense_radioButton">Expense</string>
    <string name="add_entry_income_radioButton">Income</string>
    <string name="type_of_entry">TYPE OF ENTRY</string>
    <string name="pick_date">Select Date</string>
    <string name="toast_wrong_selected_date">Cannot Select a future date</string>
    <string name="add_entry_date_textView_default">No date</string>
    <string name="action_save">Save</string>
    <string name="add_entry_unable_save">Some non-optional fields are empty</string>
    <string name="add_entry_saved">Entry saved</string>
    <string name="insert_dummy_expense">Insert dummy expense</string>
    <string name="insert_dummy_budget_entry">Insert dummy budget entry</string>
    <string name="delete_all_expenses">Delete all expenses</string>
    <string name="delete_all_expenses_dialog_msg">Delete all entries?</string>
    <string name="delete">Delete</string>
    <string name="cancel">Cancel</string>
    <string name="editor_delete_all_expenses_failed">Delete all expenses failed</string>
    <string name="editor_delete_all_expenses_successful">All entries deleted</string>
    <string name="delete_all_budget_entries">Delete all budget entries</string>
    <string name="summary_tab_selected">summary_tab_selected</string>
    <string name="budget_tab_selected">budget_tab_selected</string>
    <string name="add_budget_entry">Add budget entry</string>
    <string name="add_expense_income">Add expense/income</string>
    <string-array name="fake_string_array">
        <item>Fake element</item>
        <item>Fake element</item>
        <item>Fake element</item>
        <item>Fake element</item>
        <item>Fake element</item>
    </string-array>
</resources>
