<?xml version="1.0" encoding="utf-8"?>

<!-- Options menu for the MainContentActivity -->
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".MainContentActivity"
    android:id="@+id/main_content_menu">

    <item
        android:id="@+id/action_insert_dummy_expense"
        android:title="@string/insert_dummy_expense"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_insert_dummy_budget_entry"
        android:title="@string/insert_dummy_budget_entry"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_delete_all_expenses"
        android:title="@string/delete_all_expenses"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_delete_all_budget_entries"
        android:title="@string/delete_all_budget_entries"
        app:showAsAction="never" />
</menu>