<?xml version="1.0" encoding="utf-8"?>
<!-- Layout for the editor -->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    tools:context=".BudgetEntryActivity">

    <android.support.v7.widget.Toolbar
        android:id="@+id/budget_entry_toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/colorPrimary"
        android:elevation="6dp"
        android:minHeight="?attr/actionBarSize"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
        app:title="@string/budget_entry_page_title" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="16dp">

        <!-- Expense-Income category -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:text="@string/type_of_entry"
                android:layout_weight="1"
                style="@style/CategoryStyle" />

            <RadioGroup xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:orientation="vertical">
                <RadioButton android:id="@+id/add_entry_expense_radioButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/add_entry_expense_radioButton"
                    android:onClick="onRadioButtonClicked"/>
                <RadioButton android:id="@+id/add_entry_income_radioButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/add_entry_income_radioButton"
                    android:onClick="onRadioButtonClicked"/>
            </RadioGroup>
        </LinearLayout>

        <!-- Concept category -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <!-- Label Category -->
            <TextView
                android:text="@string/concept"
                style="@style/CategoryStyle" />

            <!-- Input field -->
            <LinearLayout
                android:layout_height="wrap_content"
                android:layout_width="0dp"
                android:layout_weight="2"
                android:paddingLeft="4dp"
                android:orientation="vertical">

                <!-- Concept drop-down spinner -->
                <Spinner
                    android:id="@+id/spinner_concept"
                    android:layout_height="48dp"
                    android:layout_width="wrap_content"
                    android:paddingRight="16dp"
                    android:spinnerMode="dropdown"/>
            </LinearLayout>
        </LinearLayout>

        <!-- Description Category -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:text="@string/description"
                style="@style/CategoryStyle" />

            <!-- Input field -->
            <LinearLayout
                android:layout_height="wrap_content"
                android:layout_width="0dp"
                android:layout_weight="2"
                android:paddingLeft="4dp"
                android:orientation="vertical">

                <!-- Description field -->
                <EditText
                    android:id="@+id/edit_description"
                    android:hint="@string/hint_description"
                    style="@style/EditorFieldStyle" />
            </LinearLayout>
        </LinearLayout>

        <!-- Currency category -->
        <LinearLayout
            android:id="@+id/container_currency"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <!-- Label -->
            <TextView
                android:text="@string/category_currency"
                style="@style/CategoryStyle" />

            <!-- Input field -->
            <LinearLayout
                android:layout_height="wrap_content"
                android:layout_width="0dp"
                android:layout_weight="2"
                android:orientation="vertical">

                <!-- Currency drop-down spinner -->
                <Spinner
                    android:id="@+id/spinner_currency"
                    android:layout_height="48dp"
                    android:layout_width="wrap_content"
                    android:paddingRight="16dp"
                    android:spinnerMode="dropdown"/>
            </LinearLayout>
        </LinearLayout>

        <!-- Quantity category -->
        <LinearLayout
            android:id="@+id/container_quantity"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <!-- Label -->
            <TextView
                android:text="@string/category_quantity"
                style="@style/CategoryStyle" />

            <!-- Input fields -->
            <RelativeLayout
                android:layout_height="wrap_content"
                android:layout_width="0dp"
                android:layout_weight="2"
                android:paddingLeft="4dp">

                <!-- Quantity field -->
                <EditText
                    android:id="@+id/edit_quantity"
                    android:hint="@string/hint_quantity"
                    android:inputType="numberDecimal"
                    style="@style/EditorFieldStyle" />

                <!-- Currency for the Quantity -->
                <TextView
                    android:id="@+id/label_quantity_currency"
                    style="@style/EditCurrencyStyle"/>
            </RelativeLayout>
        </LinearLayout>
    </LinearLayout>
</LinearLayout>
