<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_login"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@color/colorPrimary"
    tools:context="com.example.eduponz.appcontabilidad.LoginActivity">

    <TextView
        android:text="@string/login_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="140dp"
        android:fontFamily="sans-serif"
        android:textAppearance="?android:textAppearanceLarge"
        android:textColor="#ffffff"
        android:id="@+id/textView" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="30dp"
        android:inputType="numberPassword"
        android:hint="@string/password_hint"
        android:textAlignment="center"
        android:textColor="#000000"
        android:background="#bab8c1"
        android:ems="10"
        android:layout_marginTop="200dp"
        android:id="@+id/passwordEditText"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:selectAllOnFocus="false" />

    <Button
        android:text="@string/login_button"
        android:layout_width="222dp"
        android:layout_height="wrap_content"
        android:id="@+id/button"
        android:onClick="accessApp"
        android:layout_centerInParent="true"
        android:layout_marginRight="53dp"
        android:layout_marginEnd="53dp" />
</RelativeLayout>
